--- a/Static_Website/style.css
+++ b/Static_Website/style.css
@@ -18,7 +18,7 @@ body {
     border: 1px solid #519975;
     padding: 10px;
     background: black;
-    height: 40vh; /* 40% of the viewport height */
+    height: 40vh; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
